fix: YouTube下载完成后自动启动流水线处理
- 修复YouTube下载完成后缺少自动启动流水线的逻辑
- 添加与B站下载相同的自动启动流水线代码
- 更新yt-dlp版本到最新(2025.09.05)以支持最新YouTube API
- 修复前端API服务中未使用参数的linter警告
- 清理测试用的冗余脚本和临时文件

现在YouTube下载完成后会自动进入流水线处理，实现端到端自动化流程

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ pytest-mock
 cryptography
 bilitool>=0.1.3
 qrcode[pil]
+yt-dlp>=2024.12.13
+# bcut-asr 将通过自动安装脚本安装
+# 如果需要手动安装，请运行: python scripts/install_bcut_asr.py
