fix: 修复GitHub Actions中的markdown-link-check兼容性问题
- 升级Node.js版本从18到20，解决兼容性问题
- 使用npx运行markdown-link-check，避免全局安装问题
- 修复.github/README.md中的GitHub链接
- 统一所有README文件的链接格式

--- a/.github/workflows/i18n-sync.yml
+++ b/.github/workflows/i18n-sync.yml
@@ -23,18 +23,18 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         
     - name: Install dependencies
       run: |
-        npm install -g markdown-link-check
+        npm install -g markdown-link-check@latest
         npm install -g markdownlint-cli
         
     - name: Check markdown links
       run: |
-        markdown-link-check README.md
-        markdown-link-check README-EN.md
-        markdown-link-check .github/README.md
+        npx markdown-link-check README.md
+        npx markdown-link-check README-EN.md
+        npx markdown-link-check .github/README.md
         
     - name: Lint markdown files
       run: |
