fix: 修复CI工作流中的联系信息校验规则
- 将硬编码的support@autoclip.com改为灵活的正则表达式
- 支持邮箱地址或联系方式的多种格式
- 接受邮箱、QQ、飞书、微信、Discord、Telegram等联系方式
- 使校验规则更加灵活和实用

--- a/.github/workflows/i18n-sync.yml
+++ b/.github/workflows/i18n-sync.yml
@@ -58,13 +58,13 @@ jobs:
     - name: Validate contact information
       run: |
         # Check if contact information is present
-        if ! grep -q "support@autoclip.com" README.md; then
-          echo "Missing contact email in Chinese README"
+        if ! grep -Eq '([A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,})|(联系|Contact).*(表单|Issue|飞书|微信|QQ|Discord|Telegram|Link|链接)' README.md; then
+          echo "Missing contact info in Chinese README"
           exit 1
         fi
         
-        if ! grep -q "support@autoclip.com" README-EN.md; then
-          echo "Missing contact email in English README"
+        if ! grep -Eq '([A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,})|(联系|Contact).*(表单|Issue|飞书|微信|QQ|Discord|Telegram|Link|链接)' README-EN.md; then
+          echo "Missing contact info in English README"
           exit 1
         fi
         
